# social-ai-reply

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  netlify.toml  package.json  pyproject.toml  railway.toml  s -ExecutionPolicy RemoteSigned) ; (& dInternshipsocial-ai-reply.venvScriptsActivate.ps1)  skills-lock.json
.github/workflows/: publish-wiki.yml
app/: main.py  middleware.py
app/api/: routes.py
app/core/: config.py  exceptions.py  log_context.py  log_events.py  logging.py  redaction.py
app/db/: __init__.py  models.py  run_migrations.py  saas_models.py  schema.sql  schema_v2.sql  session.py  supabase_client.py
app/exporters/: csv_exporter.py
app/models/: content.py
app/schemas/: analytics.py  persona.py  scraping.py
app/scrapers/: free_sources.py
app/services/: analytics_service.py  instagram_client.py  llm.py  persona_engine.py  proxy_pool.py  rate_limiter.py  scraper_engine.py
app/utils/: audit.py  datetime.py  slug.py
app/workers/: celery_app.py  tasks.py
scripts/: backfill_project_company_id.py  init_db.py  migrate_auth_to_supabase.py  run_backend.bat  run_frontend.bat
tests/: conftest.py  test_analytics_service.py  test_e2e_tweet_suggestions.py  test_logging.py  test_persona_engine.py  test_redaction.py  test_v1_discovery_relevance.py  test_v1_product.py
video/: charts.py  generate_wiki_video.py  generate_wiki_video_simple.py  slides.py
web/: .env.example  .env.local.example  components.json  middleware.ts  package-lock.json  package.json  railway.toml  tsconfig.json
wiki/: .wiki-meta.json  deployment.md
(+289 files in other folders)
